# Dbisam_fdw

./: .gitignore  Cargo.toml  README.md  init.sql  sem01_views.sql
.cargo/: config.toml
dbisam-sql/: Cargo.toml
dbisam-sql/src/: lib.rs
dbisam_fdw/: Cargo.toml  README.md  dbisam_fdw.control
dbisam_fdw/src/: connection.rs  lib.rs  quals.rs  schema_import.rs  typemap.rs
proj_init/: 01-overview.md  02-scope-v1.md  03-architecture.md  04-pushdown-contract.md  05-type-mapping.md  06-connection-broker.md  07-open-questions.md  08-q1-resolution.md  09-session-reuse.md  10-handoff.md  11-aggregate-perf.md  CONTENTS.md
