[package]
name = "dbisam_fdw"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Read-only PostgreSQL Foreign Data Wrapper for DBISAM 4, over the native Exportmaster TCP protocol."

# NOTE: standalone (not a member of the parent virtual workspace) until the
# pgrx toolchain is bootstrapped — see README.md. This keeps `cargo test` on
# the dbisam-sql renderer free of the pgrx dependency graph.

[lib]
crate-type = ["cdylib", "lib"]

# Required by `cargo pgrx schema` — the helper binary that emits the extension
# SQL. cargo-pgrx looks for a bin named `pgrx_embed_<crate>`.
[[bin]]
name = "pgrx_embed_dbisam_fdw"
path = "./src/bin/pgrx_embed.rs"
doc = false

[features]
# pgrx pins the extension to one Postgres major version per build. This box has
# system PostgreSQL 15 (postgresql-server-dev-15), so pg15 is the default and
# the version `cargo pgrx init --pg15 $(which pg_config)` targets.
default = ["pg15"]
pg13 = ["pgrx/pg13", "supabase-wrappers/pg13"]
pg14 = ["pgrx/pg14", "supabase-wrappers/pg14"]
pg15 = ["pgrx/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx/pg16", "supabase-wrappers/pg16"]
pg17 = ["pgrx/pg17", "supabase-wrappers/pg17"]
pg_test = ["supabase-wrappers/pg_test"]

[dependencies]
# supabase-wrappers 0.1.28 pins pgrx =0.16.1; cargo-pgrx must match exactly.
pgrx = "=0.16.1"
supabase-wrappers = "=0.1.28"

# The pushdown renderer (this repo) and the protocol client (sibling repo).
dbisam-sql = { path = "../dbisam-sql" }
exportmaster = { path = "../../exportmaster" }
# To handle the RecordBatch exportmaster hands back. Match exportmaster's pin.
arrow = { version = "53", default-features = false }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
